--- a/server/djangoapp/templates/djangoapp/contact.html
+++ b/server/djangoapp/templates/djangoapp/contact.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">    
     <meta charset="UTF-8">
     <title>Dealership Review</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"> 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
@@ -22,10 +22,11 @@
     <nav class="navbar navbar-light bg-light">
         <div class="container-fluid">
             <div class="navbar-header">
-                
-                <a class="navbar-brand" href="#">Online Course</a>
+                <a class="navbar-brand" href="{% url 'djangoapp:index' %}">Best Cars Dealerships</a>   
+                <!-- <a class="navbar-brand" href="#">Online Course</a> -->
             </div>
-
+            <a class="nav navbar-nav" class="active" href="{% url 'djangoapp:about' %}">About</a>
+            <a class="nav navbar-nav" href="{% url 'djangoapp:contact' %}">Contact Us</a>
         </div>
     </nav>
     <!--Add a dealer table here -->
