--- a/server/djangoapp/templates/djangoapp/about.html
+++ b/server/djangoapp/templates/djangoapp/about.html
@@ -11,21 +11,28 @@
     <body>
     <!-- Remove this line the first time you edit this file -->
     <!---- This is the index page of your Django app! -->
-    <h1>
-        Welcome to Best Cars dealership, home to the best cars in North America. We sell domestic and imported cars at reasonable prices.
-    </h1>
+
 
     <!--Add a nav bar here -->
     <nav class="navbar navbar-light bg-light">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">Best Cars</a>
+            <!--<a class="navbar-brand" href="#">Best Cars</a>
                 <a class="nav navbar-nav" class="active" href="about">About</a>
                 <a class="nav navbar-nav" href="contact">Contact Us</a>                
+            -->
+        <!--    <a class="navbar-brand" href="{% url 'djangoapp:index' %}">Best Cars Dealerships</a>
+        -->
+            <a class="navbar-brand" href="#">Best Cars Dealerships</a>
             </div>
 
+            <a class="nav navbar-nav" class="active" href="about">About</a>
+            <a class="nav navbar-nav" href="contact">Contact Us</a>             
         </div>
     </nav>
+    <h2>
+        Welcome to Best Cars dealership, home to the best cars in North America. We sell domestic and imported cars at reasonable prices.
+    </h2>
     <!--Add a dealer table here -->
 
     </body>
