--- a/server/djangoapp/templates/djangoapp/contact.html
+++ b/server/djangoapp/templates/djangoapp/contact.html
@@ -22,14 +22,30 @@
     <nav class="navbar navbar-light bg-light">
         <div class="container-fluid">
             <div class="navbar-header">
-                
-                <a class="navbar-brand" href="#">Best Cars</a>
+            <!--<a class="navbar-brand" href="#">Best Cars</a>
                 <a class="nav navbar-nav" class="active" href="about">About</a>
                 <a class="nav navbar-nav" href="contact">Contact Us</a>                
+            -->
+        <!--    <a class="navbar-brand" href="{% url 'djangoapp:index' %}">Best Cars Dealerships</a>
+        -->
+            <a class="navbar-brand" href="#">Best Cars Dealerships</a>
             </div>
 
+            <a class="nav navbar-nav" class="active" href="about">About</a>
+            <a class="nav navbar-nav" href="contact">Contact Us</a>             
         </div>
     </nav>
+    <h1>
+        Contact US
+    </h1>    
+
+    <h2>
+        Addres:12516 audelia RD dallas, tx 75243.
+    </h2>
+    <h2>
+        Telephone: 2148819880
+    </h2>    
+
     <!--Add a dealer table here -->
 
     </body>
