--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -38,8 +38,8 @@
                 </li>
                 {% endif %}
             </ul>
-           <!-- <a class="nav navbar-nav" class="active" href="about">About</a>
-            <a class="nav navbar-nav" href="contact">Contact Us</a>            --> 
+            <a class="nav navbar-nav" class="active" href="about">About</a>
+            <a class="nav navbar-nav" href="contact">Contact Us</a> 
         </div>
     </nav>
     <!--Add a dealer table here -->
