--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -2,14 +2,26 @@
 <html lang="en">
 <head>
     {% load static %}
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">    
-   <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"> -->
     <meta charset="UTF-8">
-    <title>Dealership Review</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Dealership Review</title>    
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <link href="https://unpkg.com/bootstrap-table@1.18.2/dist/bootstrap-table.min.css" rel="stylesheet">
+    <script src="https://unpkg.com/bootstrap-table@1.18.2/dist/bootstrap-table.min.js"></script>
+    <script src="https://unpkg.com/bootstrap-table@1.18.2/dist/extensions/filter-control/bootstrap-table-filter-control.min.js"></script>
+
+   <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"> -->
+
 
 </head>
 
     <body>
+   <!-- <body style="background-image: url('https://m.media-amazon.com/images/I/8126RrTSQHL._SL1500_.jpg'); 
+    background-size: cover; background-repeat: no-repeat;"> -->
+
     <!-- Remove this line the first time you edit this file -->
     <!---- This is the index page of your Django app! -->
     <!--Add a nav bar here -->
@@ -24,18 +36,24 @@
             <ul class="nav navbar-nav navbar-right">
                 {% if user.is_authenticated %}
                 <li>
-                    <a class="btn btn-link" href="#">{{ user.first_name }}({{ user.username }})</a> 
-                    <a class="btn btn-link" href="{% url 'djangoapp:logout' %}">Logout</a>
+                <!--<a class="btn btn-link" href="#">{{ user.first_name }}({{ user.username }})</a> 
+                    <a class="btn btn-link" href="{% url 'djangoapp:logout' %}">Logout</a>  -->
+                    <a class="btn btn-link" style="font-weight: bold; color: #D92121" href="#">{{ user.first_name }}({{ user.username }})</a>
+                    <a class="btn btn-link" style="font-weight: bold; color: black" href="{% url 'djangoapp:logout' %}">Logout</a>                    
                 </li>
                 {% else %}
                 <li>
                     <form class="form-inline" action="{% url 'djangoapp:login' %}" method="post">
                         {% csrf_token %}
                         <div class="input-group">
-                            <input type="text" class="form-control" placeholder="Username" name="username" >
+                        <!--<input type="text" class="form-control" placeholder="Username" name="username" >
                             <input type="password" class="form-control" placeholder="Password" name="psw" >
                             <button class="btn btn-primary" type="submit">Login</button>
-                            <a class="btn btn-link" href="{% url 'djangoapp:registration' %}">Sign Up</a>
+                            <a class="btn btn-link" href="{% url 'djangoapp:registration' %}">Sign Up</a>  -->
+                            <input type="text" style="margin:0 5px;" class="form-control" placeholder="Enter Username" name="username" >
+                            <input type="password" style="margin:0 5px;" class="form-control" placeholder="Enter Password" name="psw" >
+                            <button class="btn btn-dark" style="margin:0 5px;" type="submit">Login</button>
+                            <a class="btn btn-dark" style="margin:0 5px;" href="{% url 'djangoapp:registration' %}">Sign Up</a>
                         </div>
                     </form>
                 </li>
@@ -46,20 +64,26 @@
         </div>
     </nav>
     <!--Add a dealer table here -->
-    <div class="container">
+    <!-- <div class="container"> -->
+    <div class="container-fluid" style="width : 80%; margin-top : 3%;">
+        <!-- <h1 style="color:white">List of Our Dealers across North America :</h1> -->
+        <h1 style="color:black">List of Our Dealers across North America :</h1>
+        <br>
+        <div style="background-color:#E7E7E7; margin-bottom: 2%; padding: 10px; border-radius: 5px">        
         {% if messages %}
             {% for message in messages %}
                 <div class="alert alert-warning" role="alert">{{ message }}</div>
             {% endfor %}
         {% endif %}
     
-        <table class="table" id="table"
-            data-filter-control="true">
-            <thead>
+        <!-- <table class="table" id="table" data-filter-control="true"> -->
+        <table id="table" class="table table-sm table-dark table-striped text-center" data-pagination="true" data-filter-control="true">
+            <!-- <thead> -->
+            <thead class="thead-light">
                 <tr>
-                    <th data-field="id">ID</th>
-                    <th data-field="full_name">Dealer Name</th>
-                    <th data-field="city">City</th>
+                    <th data-field="id" data-sortable="true" >ID</th>
+                    <th data-field="full_name" data-sortable="true" >Dealer Name</th>
+                    <th data-field="city" data-sortable="true" >City</th>
                     <th data-field="address">Address</th>
                     <th data-field="zip">Zip</th>
                     <th data-field="state" data-filter-control="select">State</th>
@@ -70,7 +94,8 @@
                     <tr>
                         
                         <td>{{dealer.id}}</td>
-                        <td><a href="{% url 'djangoapp:dealer_details' dealer.id %}">{{dealer.full_name}}</a></td>
+                        <!-- <td><a href="{% url 'djangoapp:dealer_details' dealer.id %}">{{dealer.full_name}}</a></td> -->
+                        <td><a href="{% url 'djangoapp:dealer_details' dealer.id %}" style="color:white">{{dealer.full_name}}</a></td>                         
                         <td>{{dealer.city}}</td>
                         <td>{{dealer.address}}</td>
                         <td>{{dealer.zip}}</td>
@@ -85,5 +110,5 @@
         $(function() {
           $('#table').bootstrapTable()
         })
-      </script>
+    </script>
 </html>
