--- a/server/djangoapp/templates/djangoapp/dealer_details.html
+++ b/server/djangoapp/templates/djangoapp/dealer_details.html
@@ -1,40 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Dealership Review</title>
     {% load static %}
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">    
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Dealership Review</title>    
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <link href="https://unpkg.com/bootstrap-table@1.18.2/dist/bootstrap-table.min.css" rel="stylesheet">
+    <script src="https://unpkg.com/bootstrap-table@1.18.2/dist/bootstrap-table.min.js"></script>
+    <script src="https://unpkg.com/bootstrap-table@1.18.2/dist/extensions/filter-control/bootstrap-table-filter-control.min.js"></script>
+
 </head>
 
     <body>
+    <!--<body style="background-image: url('https://m.media-amazon.com/images/I/8126RrTSQHL._SL1500_.jpg'); 
+    background-size: cover; background-repeat: no-repeat;"> -->
 
     <!--Add a nav bar here -->
-    <nav class="navbar navbar-light bg-light">
+    <!-- <nav class="navbar navbar-light bg-light"> -->
+    <nav class="navbar navbar-expand-sm bg-light">
         <div class="container-fluid">
             <div class="navbar-header">
+                <img src="https://st4.depositphotos.com/25658280/27299/v/600/depositphotos_272990568-stock-illustration-car-dealer-logo-icon-vector.jpg" 
+                alt="company logo" width="60px" >
+                <b>Best Cars Dealership</b>
+
                <!-- <a class="navbar-brand" href="#">Best Cars Dealerships</a> -->
-                <a class="navbar-brand" href="{% url 'djangoapp:index' %}">Home</a>
+               <!-- <a class="navbar-brand" href="{% url 'djangoapp:index' %}">Home</a>
                 <a class="navbar-brand" href="{% url 'djangoapp:about' %}">About Us</a>
-                <a class="navbar-brand" href="{% url 'djangoapp:contact' %}">Contact Us</a>               
+                <a class="navbar-brand" href="{% url 'djangoapp:contact' %}">Contact Us</a> -->
             </div>
             <ul class="nav navbar-nav navbar-right">
+            <!-- <ul class="navbar-nav ml-auto"> -->
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'djangoapp:index' %}" style="font-weight: bold; color: black">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" style="font-weight: bold; color: black" class="active" href="{% url 'djangoapp:about' %}">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link"  style="font-weight: bold; color: black" href="{% url 'djangoapp:contact' %}">Contact Us</a>
+                </li>                
                 {% if user.is_authenticated %}
                 <li>
-                    <a class="btn btn-link" href="#">{{ user.first_name }}({{ user.username }})</a> 
-                    <a class="btn btn-link" href="{% url 'djangoapp:logout' %}">Logout</a>
+                    <!-- <a class="btn btn-link" href="#">{{ user.first_name }}({{ user.username }})</a> 
+                    <a class="btn btn-link" href="{% url 'djangoapp:logout' %}">Logout</a> -->
+                    <a class="btn btn-link" style="font-weight: bold; color: #D92121" href="#">{{ user.first_name }}({{ user.username }})</a>
+                    <a class="btn btn-link" style="font-weight: bold; color: black" href="{% url 'djangoapp:logout' %}">Logout</a>                    
                 </li>
                 {% else %}
                 <!-- <li> -->
                     <form class="form-inline" action="{% url 'djangoapp:login' %}" method="post">
                         {% csrf_token %}
                         <div class="input-group">
-                            <input type="text" class="form-control" placeholder="Username" name="username" >
+                            <!--<input type="text" class="form-control" placeholder="Username" name="username" >
                             <input type="password" class="form-control" placeholder="Password" name="psw" >
                             <button class="btn btn-primary" type="submit">Login</button>
-                            <!-- <a class="btn btn-link" href="{% url 'djangoapp:registration' %}">Sign Up</a> -->
-                            <a class="nav-link" style="font-size:15px" href="{% url 'djangoapp:registration' %}">Sign Up</a>                            
+                            <a class="btn btn-link" href="{% url 'djangoapp:registration' %}">Sign Up</a> -->
+                            <!-- <a class="nav-link" style="font-size:15px" href="{% url 'djangoapp:registration' %}">Sign Up</a> -->
+                            <input type="text" style="margin:0 5px;" class="form-control" placeholder="Enter Username" name="username" >
+                            <input type="password" style="margin:0 5px;" class="form-control" placeholder="Enter Password" name="psw" >
+                            <button class="btn btn-dark" style="margin:0 5px;" type="submit">Login</button>
+                            <a class="btn btn-dark" style="margin:0 5px;" href="{% url 'djangoapp:registration' %}">Sign Up</a>                            
                         </div>
                     </form>
                 <!-- </li> -->
