--- a/server/djangoapp/templates/djangoapp/contact.html
+++ b/server/djangoapp/templates/djangoapp/contact.html
@@ -15,39 +15,71 @@
 
 </head>
 
-    <body>
-    <!-- Remove this line the first time you edit this file -->
-    <!---- This is the index page of your Django app! -->
-    <!--Add a nav bar here -->
-    <nav class="navbar navbar-light bg-light">
-        <div class="container-fluid">
-            <div class="navbar-header">
-            <!--<a class="navbar-brand" href="#">Best Cars</a>
-                <a class="nav navbar-nav" class="active" href="about">About</a>
-                <a class="nav navbar-nav" href="contact">Contact Us</a>                
-            -->
-        <!--    <a class="navbar-brand" href="{% url 'djangoapp:index' %}">Best Cars Dealerships</a>
-        -->
-            <a class="navbar-brand" href="#">Best Cars Dealerships</a>
+  <body>
+    <!--<body style="background-image: url('https://m.media-amazon.com/images/I/8126RrTSQHL._SL1500_.jpg'); 
+    background-size: cover; background-repeat: no-repeat;" > -->
+        <nav class="navbar navbar-expand-sm bg-light">
+            <div class="container-fluid">
+                <div class="navbar-brand">
+                    <img src="https://st4.depositphotos.com/25658280/27299/v/600/depositphotos_272990568-stock-illustration-car-dealer-logo-icon-vector.jpg"
+                     alt="company logo" width="60px" > 
+                    <b>Best Cars Dealership</b>
+                </div>
+            <ul class="navbar-nav ml-auto">
+    
+                <li class="nav-item">
+                    <a class="nav-link" style="font-weight: bold; color: black" href="{% url 'djangoapp:index' %}">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" style="font-weight: bold; color: black" class="active" href="{% url 'djangoapp:about' %}">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" style="font-weight: bold; color: black" href="{% url 'djangoapp:contact' %}">Contact Us</a>
+                </li>
+
+                {% if user.is_authenticated %}
+                <li>
+                    <a class="btn btn-link" style="font-weight: bold; color: #D92121" href="#">{{ user.first_name }}({{ user.username }})</a>
+                    <a class="btn btn-link" style="font-weight: bold; color: black" href="{% url 'djangoapp:logout' %}">Logout</a>
+                </li>
+                {% else %}
+                {% if message %}
+              <div class="alert alert-warning"> 
+                {{ message }}
+                {% endif %}
+                <li>
+                    <form class="form-inline" action="{% url 'djangoapp:login' %}" method="post">
+                        {% csrf_token %}
+                        <div class="input-group">
+                            <input type="text" style="margin:0 5px;" class="form-control" placeholder="Enter Username" name="username" >
+                            <input type="password" style="margin:0 5px;" class="form-control" placeholder="Enter Password" name="psw" >
+                            <button class="btn btn-dark" style="margin:0 5px;" type="submit">Login</button>
+                            <a class="btn btn-dark" style="margin:0 5px;" href="{% url 'djangoapp:registration' %}">Sign Up</a>
+                        </div>
+                    </form>
+                </li>
+                {% endif %}
+        
+            </ul>
             </div>
+        </nav>
+       <div class="card mx-auto" style="width:400px; padding: 20px; margin-top:10px; background-color:#212122; color: white;">
+        <img src="https://thumbs.dreamstime.com/b/contact-us-phone-icon-placed-laptop-black-keyboard-background-studio-shot-contact-us-keyboard-159500838.jpg"
+        class="card-img-top" alt="contact us image">
+        <h4 class="card-title"><br>Feel free to reach out to us at : </h4>
+           <address class="card-body">
+               Best Cars Dealership
+                <br>7310 Lemmon Ave,
+                <br>Dallas,
+                <br>Texas, TX
+                <br>Zip Code : 75209
+                <br>Contact : (214) 881-9880
+                <br>Email : bestcarsdealership@example.com
+           </address>
+        
+    </div>
+          
+  </body>
 
-            <a class="nav navbar-nav" class="active" href="about">About</a>
-            <a class="nav navbar-nav" href="contact">Contact Us</a>             
-        </div>
-    </nav>
-    <h1>
-        Contact US
-    </h1>    
-
-    <h2>
-        Addres:12516 audelia RD dallas, tx 75243.
-    </h2>
-    <h2>
-        Telephone: 2148819880
-    </h2>    
-
-    <!--Add a dealer table here -->
-
-    </body>
 
 </html>
