--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -18,38 +18,47 @@
 
 </head>
 
-    <body>
+  <body>
    <!-- <body style="background-image: url('https://m.media-amazon.com/images/I/8126RrTSQHL._SL1500_.jpg'); 
     background-size: cover; background-repeat: no-repeat;"> -->
 
     <!-- Remove this line the first time you edit this file -->
     <!---- This is the index page of your Django app! -->
     <!--Add a nav bar here -->
-    <nav class="navbar navbar-light bg-light">
+    <nav class="navbar navbar-expand-sm bg-light">
         <div class="container-fluid">
-            <div class="navbar-header">
-               <!-- <a class="navbar-brand" href="#">Best Cars Dealerships</a> -->
-                <a class="navbar-brand" href="{% url 'djangoapp:index' %}">Home</a>
-                <a class="navbar-brand" href="{% url 'djangoapp:about' %}">About Us</a>
-                <a class="navbar-brand" href="{% url 'djangoapp:contact' %}">Contact Us</a>               
+            <div class="navbar-brand">
+                <img src="https://st4.depositphotos.com/25658280/27299/v/600/depositphotos_272990568-stock-illustration-car-dealer-logo-icon-vector.jpg" 
+                alt="company logo" width="60px" >
+                <b>Best Cars Dealership</b>
             </div>
-            <ul class="nav navbar-nav navbar-right">
-                {% if user.is_authenticated %}
+        <ul class="navbar-nav ml-auto">
+
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'djangoapp:index' %}" style="font-weight: bold; color: black">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" style="font-weight: bold; color: black" class="active" href="{% url 'djangoapp:about' %}">About</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link"  style="font-weight: bold; color: black" href="{% url 'djangoapp:contact' %}">Contact Us</a>
+            </li>
+
+            {% if user.is_authenticated %}
                 <li>
-                <!--<a class="btn btn-link" href="#">{{ user.first_name }}({{ user.username }})</a> 
-                    <a class="btn btn-link" href="{% url 'djangoapp:logout' %}">Logout</a>  -->
                     <a class="btn btn-link" style="font-weight: bold; color: #D92121" href="#">{{ user.first_name }}({{ user.username }})</a>
-                    <a class="btn btn-link" style="font-weight: bold; color: black" href="{% url 'djangoapp:logout' %}">Logout</a>                    
+                    <a class="btn btn-link" style="font-weight: bold; color: black" href="{% url 'djangoapp:logout' %}">Logout</a>
                 </li>
                 {% else %}
+                {% if message %}
+              <div class="alert alert-warning"> 
+                {{ message }}
+              </div>
+                {% endif %}
                 <li>
                     <form class="form-inline" action="{% url 'djangoapp:login' %}" method="post">
                         {% csrf_token %}
                         <div class="input-group">
-                        <!--<input type="text" class="form-control" placeholder="Username" name="username" >
-                            <input type="password" class="form-control" placeholder="Password" name="psw" >
-                            <button class="btn btn-primary" type="submit">Login</button>
-                            <a class="btn btn-link" href="{% url 'djangoapp:registration' %}">Sign Up</a>  -->
                             <input type="text" style="margin:0 5px;" class="form-control" placeholder="Enter Username" name="username" >
                             <input type="password" style="margin:0 5px;" class="form-control" placeholder="Enter Password" name="psw" >
                             <button class="btn btn-dark" style="margin:0 5px;" type="submit">Login</button>
@@ -57,10 +66,9 @@
                         </div>
                     </form>
                 </li>
-                {% endif %}
-            </ul>
-            <!-- <a class="nav navbar-nav" class="active" href="about">About</a>
-            <a class="nav navbar-nav" href="contact">Contact Us</a>  -->
+            {% endif %}
+    
+        </ul>
         </div>
     </nav>
     <!--Add a dealer table here -->
