--- a/server/djangoapp/templates/djangoapp/user_registration.html
+++ b/server/djangoapp/templates/djangoapp/user_registration.html
@@ -8,37 +8,75 @@
     <title>Dealership Review</title>
 </head>
     <body>
+        <!-- <body style="background-image: url('https://m.media-amazon.com/images/I/8126RrTSQHL._SL1500_.jpg'); 
+        background-size: cover; background-repeat: no-repeat;" > -->
+            <!--Nav bar here -->
+        <nav class="navbar navbar-expand-sm bg-light">
+            <div class="container-fluid">
+                <div class="navbar-brand">
+                    <img src="https://st4.depositphotos.com/25658280/27299/v/600/depositphotos_272990568-stock-illustration-car-dealer-logo-icon-vector.jpg" 
+                    alt="company logo" width="60px" >
+                    <b>Best Cars Dealership</b>
+                </div>
+            <ul class="navbar-nav ml-auto">
+    
+                <li class="nav-item">
+                    <a class="nav-link" style="font-weight: bold; color: black" href="{% url 'djangoapp:index' %}">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" style="font-weight: bold; color: black" class="active" href="{% url 'djangoapp:about' %}">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" style="font-weight: bold; color: black" href="{% url 'djangoapp:contact' %}">Contact Us</a>
+                </li>
+    
+                {% if user.is_authenticated %}
+                    <li>
+                        <a class="btn btn-link" style="font-weight: bold; color: #D92121" href="#">{{ user.first_name }}({{ user.username }})</a>
+                        <a class="btn btn-link" style="font-weight: bold; color: black" href="{% url 'djangoapp:logout' %}">Logout</a>
+                    </li>
+                    {% else %}
+                    <li>
+                        <form class="form-inline" action="{% url 'djangoapp:login' %}" method="post">
+                            {% csrf_token %}
+                            <div class="input-group">
+                                <input type="text" style="margin:0 5px;" class="form-control" placeholder="Enter Username" name="username" >
+                                <input type="password" style="margin:0 5px;" class="form-control" placeholder="Enter Password" name="psw" >
+                                <button class="btn btn-dark" style="margin:0 5px;" type="submit">Login</button>
+                                <a class="btn btn-dark" style="margin:0 5px;" href="{% url 'djangoapp:registration' %}">Sign Up</a>
+                            </div>
+                        </form>
+                    </li>
+                    {% endif %}
+        
+            </ul>
+            </div>
+        </nav>
     <!--Add a registration form here -->
     <form action="{% url 'djangoapp:registration' %}" method="post">
-        <div class="container"> <!--Style root div with .container class -->
+        <div style="color:white; width: 70%;" class="container"> <!--Style root div with .container class -->
             {% csrf_token %}
             <h1>Sign Up</h1>
             <hr>
-                <div class="form-group"> <!--Style second div with .form-group class -->
-                    <label for="username"><b>User Name</b></label>
-                    <input type="text" class="form-control" placeholder="Enter User Name: " name="username" required> <!--Style input with .form-control class -->
-                    <label for="firstname"><b>First Name</b></label>
-                    <input type="text" class="form-control" placeholder="Enter First Name: " name="firstname" required> <!--Style input with .form-control class -->
-                    <label for="lastname"><b>Last Name</b></label>
-                    <input type="text" class="form-control" placeholder="Enter Last Name: " name="lastname" required> <!--Style input with .form-control class -->
-                    <label for="psw"><b>Password</b></label>
-                    <input type="password" class="form-control" placeholder="Enter Password: " name="psw" required> <!--Style input with .form-control class -->
-                       <!-- {% if message %} -->
-                        <!-- <div class="alert alert-warning"> --> <!--Style the message paragraph with .alert and .alert-warning class -->
-                        <!-- {{ message }}
-                        </div>
-                        {% endif %}
-                        <button class="btn btn-primary" type="submit">Sign up</button> --> <!--Style button with .btn and .btn-primary class --> 
+            <div class="form-group"> <!--Style second div with .form-group class -->
+                <label for="username"><b>User Name *</b></label>
+                <input type="text" style="margin: 10px 0px" class="form-control" placeholder="Enter Your User Name here " name="username" required> <!--Style input with .form-control class -->
+                <label for="firstname"><b>First Name *</b></label>
+                <input type="text" style="margin:10px 0px" class="form-control" placeholder="Enter Your First Name here " name="firstname" required> <!--Style input with .form-control class -->
+                <label for="lastname"><b>Last Name *</b></label>
+                <input type="text" style="margin:10px 0px" class="form-control" placeholder="Enter Your Last Name here " name="lastname" required> <!--Style input with .form-control class -->
+                <label for="email"><b>Email ID (Optional)</b></label>
+                <input type="email" style="margin:10px 0px" class="form-control" placeholder="Enter Your Email ID here " name="email">
+                <label for="psw"><b>Password *</b></label>
+                <input type="password" style="margin:10px 0px" class="form-control" placeholder="Enter Your Password here " name="psw" required> <!--Style input with .form-control class -->
+                {% if message %}
+                <div class="alert alert-warning"> <!--Style the message paragraph with .alert and .alert-warning class -->
+                    {{ message }}
                 </div>
-                <div>
-                    <button class="btn btn-primary" type="submit">Sign up</button>
-                  </div>
-                  {% if messages %}
-                      {% for message in messages %}
-                          <div class="alert alert-warning" role="alert">{{ message }}</div>
-                      {% endfor %}
-                  {% endif %}
+                {% endif %}
+                <button class="btn btn-info" style="margin:10px 0px; background-color: #D92121" type="submit"><b>Sign up</b></button> <!--Style button with .btn and .btn-primary class -->
+            </div>
         </div>
-      </form>
+    </form>
     </body>
 </html>
